Fix spacing bug that caused <Board> to look like a rectangle

--- a/src/styles/game.sass
+++ b/src/styles/game.sass
@@ -1,5 +1,5 @@
 .game-board-container
-  @apply flex justify-center items-center h-full w-full py-8 px-3 max-w-full
+  @apply flex justify-center items-center h-full w-full max-w-full
   > .game-board
     max-height: 100vw
     @apply w-full h-full relative flex items-center justify-center flex-col mx-auto
@@ -22,7 +22,7 @@
       @apply fill-blue-gray-600
   @each $dir in 'top', 'right', 'bottom', 'left'
     &.position-#{$dir}
-      #{$dir}: 0
+      #{$dir}: .75rem
       flex-direction: unquote(get-flex-direction($dir))
       > .card
         margin-#{$dir}: .5rem
